Fix dockerfile again

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -23,9 +23,9 @@ ARG AUTH0_CLIENT_SECRET
 ARG FIREBASE_SERVICE_ACCOUNT_BASE64
 
 # Expose the environment variables
-ENV HH_DATABASE_URL=$HH_DATABASE_URL
-ENV AUTH0_CLIENT_SECRET=$AUTH0_CLIENT_SECRET
-ENV FIREBASE_SERVICE_ACCOUNT_BASE64=$FIREBASE_SERVICE_ACCOUNT_BASE64
+ENV HH_DATABASE_URL=${HH_DATABASE_URL}
+ENV AUTH0_CLIENT_SECRET=${AUTH0_CLIENT_SECRET}
+ENV FIREBASE_SERVICE_ACCOUNT_BASE64=${FIREBASE_SERVICE_ACCOUNT_BASE64}
 
 # Expose the port where the app runs
 EXPOSE 8000
